package at.fhj.swd;

interface Expression {
    public float evaluate();
}
